[package]
name = "cargo-toml-fmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit = "0.14.4" 
anyhow = {version = "1.0.58", default-features = false }
toml = {version="0.5.9"}
strum = { version = "0.24.1", features=["derive"]}
strum_macros = {version="0.24.1"}
serde = {version="1.0",features=["derive"]}
itertools = "0.10"
serde_json = "1.0"