[package]
name = "cargo-toml-fmt"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.58", default-features = false }
itertools = "0.10"
regex = "1.6.0"
serde = { version = "1.0", features = ["derive"] }

# group 1
serde_json = "1.0"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = { version = "0.24.1" }
toml = { version = "0.5.9" }
toml_edit = "0.14.4" 
walkdir = "2.3.2"
